# spark

./: Quick-setup.md  README.md  github-setup.txt  network.md
Android/Article/: AOSP清华源镜像下载源码.txt  adb wifi connect.txt
Android/Demo/: gradle.properties  settings.gradle
Android/Demo/app/: android.jks  build.gradle
Android/Demo/nanohttpd/: build.gradle
Android/Demo/permission/: build.gradle
Android/Demo/test/: build.gradle
Android/Demo/toast/: build.gradle
Android/Demo/util/: build.gradle
CMake/: CMakeLists.txt  cmake-build-android.sh  create-toolchain.sh  make-build-all.sh  make-build-android.sh  readme.txt
Cpp/: CMakeLists.txt  C函数.txt  People.cpp  People.h  Teacher.cpp  Teacher.h  abstract_class.cpp  atexit.c  cmake-build-android.sh  cmake-build-linux.sh  const_cast.cpp  cpu.cpp  cpustat.cpp  crypto.cpp  cscope.in.out  cscope.out  cscope.po.out  dup.c  fork.c  getopt.c  getopt_long.c  pipe.c  pthread.c  pthread_kill.c  reinterpret_cast.cpp  sigaction.c  signal.c  sigprocmask.c  string_char.cpp  tags  virtual_function.cpp  wait.c  waitpid.c
Cpp/Demo/: Makefile  main.cpp  readme.txt
Cpp/Demo/demo1/: Makefile
Cpp/Demo/demo2/: Makefile
Cpp/Demo/demo2/tmp1/: hello.c
Cpp/Demo/demo2/tmp2/: main.c
Doc/Markdown/: Markdown语法.md
Go/: readme-go.txt
Java/: IDEA中文乱码.txt  gradle入门.txt  log4j使用@Slf4j.txt  maven使用.txt
Java/Demo/Demo-Gradle/: build.gradle  local.properties  readme.txt  settings.gradle
Java/Demo/Demo-springboot/: pom.xml
Java/Test/Test/: pom.xml
JavaScript/: nodejs.md
Linux/Shell/: loop_run.sh  loop_test.sh  shell教程.txt  test.sh
Linux/Ubuntu/: change-apt-sources.txt  ffmpeg.txt  gradle-install.txt  makefile.txt  mysql.txt  nginx.txt  sqlite3.txt  vim.txt  vim快捷键.txt
Linux/Ubuntu/vim/: .vimrc
Meson/: meson.build  reademe.txt
Meson/hello_world/: meson.build
Meson/static_library/: meson.build
Meson/static_library/src/: lib.c
Meson/use_library/: meson.build
Meson/use_library/src/: main.c
Meson/use_third_library/: meson.build
Meson/use_third_library/src/include/: lib.h
Python/: python语法.txt
Python/Django/: Django.txt
Sql/: contacts.sql  users.sql
TypeScript/: TypeScript.txt
TypeScript/Demo/: app.js  app.ts
Vue/: Vue.txt
Windows/: BAT语法.txt  adb-shell.bat  adb-start.bat  test.bat  wsl.txt
(+373 files in other folders)
