cmake_minimum_required(VERSION 3.10.2)
project(Cpp)
include_directories(include/)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -no-pie -rdynamic")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -no-pie -rdynamic")
add_executable(getopt getopt.c)
add_executable(getopt_long getopt_long.c)
add_executable(signal signal.c)
add_executable(cpu cpu.cpp)
add_executable(cpustat cpustat.cpp)
add_executable(pthread pthread.c)
add_executable(pthread_kill pthread_kill.c)
add_executable(fork fork.c)
add_executable(pipe pipe.c)
add_executable(waitpid waitpid.c)
add_executable(wait wait.c)
add_executable(sigaction sigaction.c)
add_executable(sigprocmask sigprocmask.c)
add_executable(atexit atexit.c)
add_executable(dup dup.c)
add_executable(virtual_function People.cpp Teacher.cpp virtual_function.cpp)
add_executable(abstract_class abstract_class.cpp)
